@@ -55,7 +55,7 @@ The :mod:`shlex` module defines the following class:
 
 .. seealso::
 
-   Module :mod:`ConfigParser`
+   Module :mod:`configparser`
       Parser for configuration files similar to the Windows :file:`.ini` files.
 
 
