@@ -349,7 +349,7 @@ Common commands: (see '--help-commands' for more)
 
     def parse_config_files (self, filenames=None):
 
-        from ConfigParser import ConfigParser
+        from configparser import ConfigParser
 
         if filenames is None:
             filenames = self.find_config_files()
